crates/normalize/tests/snapshots/cli_snapshots__help_init.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"init\"])"
---
Set up normalize in a new project. Run once after cloning to create .normalize/ config.

Usage: normalize init [OPTIONS]

Options:
      --index                      Index the codebase after initialization
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --setup                      Run interactive rule setup wizard after initialization
      --dry-run                    Preview changes without writing
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize init                         # create .normalize/ config directory
normalize init --setup                 # interactive rule setup wizard
