crates/normalize/tests/snapshots/cli_snapshots__help_overview.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"overview\"])"
---
Codebase dashboards: health, full analysis, single-page summary, cross-repo health.

Usage: normalize overview [OPTIONS] [target] [COMMAND]

Commands:
  health             Codebase health dashboard: file counts, complexity stats, large-file warnings.
  summary            Auto-generated single-page codebase overview.
  cross-repo-health  Rank repositories by composite tech-debt score (churn × complexity × coupling).
  help               Print this message or the help of the given subcommand(s)

Arguments:
  [target]  Target file or directory

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --only <only>                Include only paths matching pattern
  -l, --limit <limit>              Maximum number of large files to include in output (0 = no limit, default 10)
      --full                       Run all analysis passes (health + complexity + length + security)
  -h, --help                       Print help
  -V, --version                    Print version

Thin composition over the analysis surface — one place for the aggregate reports.

Examples:
normalize overview                       # health dashboard
normalize overview --full                # run all analysis passes
normalize overview summary               # single-page codebase overview
normalize overview cross-repo-health ~/src  # rank repos by tech-debt
