crates/normalize/tests/snapshots/cli_snapshots__help_package.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"package\"])"
---
Query package metadata and dependencies. Use to check versions, find outdated deps, or view dep trees.

Usage: normalize package [OPTIONS] [COMMAND]

Commands:
  info      Query package info from registry
  list      List declared dependencies from manifest
  tree      Show dependency tree from lockfile
  why       Show why a dependency is in the tree
  outdated  Show outdated packages (installed vs latest)
  audit     Check for security vulnerabilities
  help      Print this message or the help of the given subcommand(s)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
