crates/normalize/tests/snapshots/cli_snapshots__help_package_info.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"package\", \"info\"])"
---
Query package info from registry

Usage: normalize package info [OPTIONS] [package]

Arguments:
  [package]  Package name to query (optionally with @version)

Options:
  -e, --ecosystem <ecosystem>      Force specific ecosystem (cargo, npm, python)
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize package info express                    # look up a package by name
normalize package info serde@1.0 -e cargo         # query a specific version and ecosystem
