crates/normalize/tests/snapshots/cli_snapshots__help_package_why.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"package\", \"why\"])"
---
Show why a dependency is in the tree

Usage: normalize package why [OPTIONS] [package]

Arguments:
  [package]  Package name to trace

Options:
  -e, --ecosystem <ecosystem>      Force specific ecosystem (cargo, npm, python)
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize package why serde                      # trace why serde is a dependency
