crates/normalize/tests/snapshots/cli_snapshots__help_rank.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rank\"])"
---
Rank files and functions by metrics. Use to find the most complex, longest, or most coupled code.

Usage: normalize rank [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version

Code quality:
  complexity       Rank functions by cyclomatic complexity, worst first.
  ceremony         Rank files by boilerplate ratio: fraction of callables that are trait/interface implementations.
  length           Find the longest functions in the codebase, ranked by line count.
  uniqueness       Rank modules by code uniqueness: fraction of functions with no structural near-twin.
  call-complexity  Rank functions by effective complexity: cyclomatic complexity summed over the full call graph.
  duplicates       Detect duplicate or similar code blocks and functions across the codebase.
  duplicate-types  Detect duplicate type definitions (structs, enums, classes) across the codebase.
  fragments        Find repeated AST fragments (sub-expressions, statement patterns) across the codebase.

Module structure:
  size             Show hierarchical lines-of-code breakdown (ncdu-style tree view).
  density          Rank modules by information density: compression ratio combined with token uniqueness.
  imports          Rank modules by import fan-in: how many other modules import each module.
  surface          Rank modules by API surface area: public symbol count, public ratio, and constraint score.
  depth-map        Rank modules by dependency depth and ripple risk in the import graph.
  layering         Rank modules by import layering compliance: do imports flow in one direction?
  module-health    Score each module on a composite health metric: test ratio × uniqueness × density.

Repository:
  files            Rank source files by line count, longest first.

Git history:
  hotspots         Rank files by churn × complexity: the highest-risk files for introducing bugs.
  coupling         Rank file pairs by temporal coupling: pairs that appear in the same git commits.
  ownership        Rank files by ownership concentration: how many authors contribute to each file.
  contributors     Rank contributors by commit activity across one or more repositories.

Testing:
  test-ratio       Rank modules by test-to-implementation line ratio.
  test-gaps        Identify public functions that lack test coverage, ranked by risk score.
  budget           Break down line counts by purpose: business logic, tests, docs, config, and generated code.
