crates/normalize/tests/snapshots/cli_snapshots__help_rank_complexity.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rank\", \"complexity\"])"
---
Rank functions by cyclomatic complexity, worst first.

Usage: normalize rank complexity [OPTIONS] [target]

Arguments:
  [target]  Target file or directory

Options:
      --pretty                     Human-friendly output with colors and formatting
  -r, --root <root>                Root directory (defaults to current directory)
      --compact                    Compact output without colors (overrides TTY detection)
  -t, --threshold <threshold>      Only show functions above this threshold
      --jsonl                      Output one JSON object per line (for arrays)
  -l, --limit <limit>              Maximum number of functions to show (0=no limit)
      --exclude <exclude>          Exclude paths matching pattern
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --only <only>                Include only paths matching pattern
      --diff <diff>                Show delta vs this git ref (branch, tag, commit, HEAD~N)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Accepts an optional `target` path, a complexity `threshold`, and a `limit` on results.
Use `diff` to compare against a git ref and show deltas. Returns a `ComplexityReport`
with per-function complexity scores, file locations, and optional delta values.

The `Risk` column bands each function by McCabe cyclomatic complexity:
Low (1-5), Moderate (6-10), High (11-20), Critical (21+).
